# Shot-Caller-WoW

./: .clang-format  .gitignore  CMakeLists.txt  README.md  todo.txt
.cache/clangd/index/: engine.cpp.024EF44AD1C5E615.idx  engine.cpp.25A6EFAEDC4DE9F1.idx  engine.h.195C3DB48A292B91.idx  engine.h.78CFC67236A49FAF.idx  lineReader.cpp.22F365AA74FBB750.idx  lineReader.h.A3963DFA963BFEAC.idx  lineReader.h.C6AA417B62869C9E.idx  line_reader.cpp.780C118CCD230FEA.idx  line_reader.cpp.F862AE829711E767.idx  main.cpp.0BCE07599F607775.idx  main.cpp.5937F366843FF25F.idx  parser.cpp.258F51D1F56B8274.idx  parser.cpp.EEC45C4A7E70AE66.idx  parser.h.0F3C711612855565.idx  parser.h.F393FC82F9EACED8.idx  spell_db.cpp.5055F406DF267A87.idx  spell_db.h.9E9D52DCD7C025FF.idx  structs.cpp.84124BA5D96B4FD6.idx  structs.h.211C55387F555E6E.idx
discord_bot/: main.py
include/: constants.h  engine.h  lineReader.h  lineWriter.h  line_reader.h  line_writer.h  parser.h  socket_sender.h  spell_db.h  structs.h
src/: engine.cpp  line_reader.cpp  line_writer.cpp  main.cpp  parser.cpp  socket_sender.cpp  spell_db.cpp  structs.cpp
tests/: test_constants.cpp  test_engine.cpp  test_parser.cpp
tests/scripts/: line_writer.py
text_files/: combat_log_small.txt  db.lua
